# odmantic-test

./: README.md  pyproject.toml
.github/workflows/: test.yml
app/: main.py
tests/: conftest.py  test_app.py  test_trees.py
